# OpenCVFFI

./: .gitignore  README.md  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/gustavovisentini/opencv_ffi/: OpencvFfiPlugin.kt
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/opencv_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: loadffi.dart  main.dart
example/test/: widget_test.dart
ios/: opencv_ffi.podspec
ios/Classes/: OpencvFfiPlugin.h  OpencvFfiPlugin.m  SwiftOpencvFfiPlugin.swift  opencv_ffi.cpp
lib/: opencv_ffi.dart
test/: opencv_ffi_test.dart
